# rest-comparison

./: .envrc  flake.nix
fastapi-demo/: pyproject.toml
fastapi-demo/src/fastapi_demo/: __init__.py
poem-demo/: .envrc  Cargo.toml
poem-demo/migrations/: 20250609142505_create_todo_table.sql
poem-demo/src/: api.rs  main.rs
