[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ibrahim Fuad", email = "creativeibi77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
